********************************************************************************
mixKernel 0.2 [2017-10-17]
New options:
  Additional kernels          : gaussian.radial.basis, poisson
  

*******************************************************************************
mixKernel 0.1 [2017-05-18]
Initial release