@@ -1,13 +1,14 @@
 Package: mixKernel
 Type: Package
 Title: Omics Data Integration Using Kernel Methods
-Version: 0.2
-Date: 2018-09-11
+Version: 0.3
+Date: 2018-11-26
 Depends: R (>= 2.10), mixOmics, ggplot2
 Imports: vegan, phyloseq, corrplot, psych, quadprog, LDRTools, Matrix,
         methods
-Authors@R: c(person("Jerome", "Mariette", role = c("aut", "cre"), email="jerome.mariette@inra.fr"),
-          person("Nathalie", "Villa-Vialaneix", role = c("aut"), email="nathalie.villa-vialaneix@inra.fr"))
+Authors@R: c(
+	person("Jerome", "Mariette", role = c("aut", "cre"), email="jerome.mariette@inra.fr"),
+	person("Nathalie", "Villa-Vialaneix", role = c("aut"), email="nathalie.villa-vialaneix@inra.fr"))
 Maintainer: Jerome Mariette <jerome.mariette@inra.fr>
 Description: Kernel-based methods are powerful methods for integrating 
     heterogeneous types of data. mixKernel aims at providing methods to combine
@@ -16,12 +17,13 @@ Description: Kernel-based methods are powerful methods for integrating
     best preserves the original topology of the data. mixKernel also integrates
     kernel PCA to visualize similarities between samples in a non linear space
     and from the multiple source point of view. Functions to assess and display
-    important variables are also provided in the package. 
+    important variables are also provided in the package. Jerome Mariette and 
+    Nathalie Villa-Vialaneix (2017) <doi:10.1093/bioinformatics/btx682>.
 License: GPL (>= 2)
 Repository: CRAN
-Date/Publication: 2018-09-11 14:50:03 UTC
-Packaged: 2018-09-11 13:49:43 UTC; jmariette
-NeedsCompilation: no
-LazyData: true
+Date/Publication: 2018-11-26 11:00:08 UTC
+Packaged: 2018-11-26 10:51:43 UTC; jmariette
 Author: Jerome Mariette [aut, cre],
   Nathalie Villa-Vialaneix [aut]
+NeedsCompilation: no
+LazyData: true
